# serialPort

./: README.md  README4.1.1.md  README_EN.md  build.gradle  settings.gradle
.github/ISSUE_TEMPLATE/: 提交bug.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cl/myapplication/: App.java  MainActivity.kt  MainActivity2.java  MainJavaActivity.java  MultiSerialPortActivity.java  SelectSerialPortActivity.kt  SingleSerialPortActivity.java
app/src/main/res/layout/: activity_main.xml  activity_main_java.xml  activity_multi_serial.xml  activity_multi_serial_new.xml  activity_select_serial_port.xml  fragment_log.xml  include_fragment_container.xml  item_device.xml  item_log.xml  spinner_default_item.xml  spinner_item.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
serial_lib/: build.gradle  consumer-rules.pro
serial_lib/src/main/cpp/: CMakeLists.txt  SerialPort.c  SerialPort.h
serial_lib/src/main/java/com/cl/serialportlibrary/: Device.java  Driver.java  MultiSerialPortManager.java  SerialConfig.java  SerialPort.java  SerialPortFinder.java  SerialPortManager.java  SimpleSerialPortManager.java
serial_lib/src/main/java/com/kongqw/serialportlibrary/: ConfigurationSdk.java  Device.java  Driver.java  MultiSerialPortManager.java  ReadThread.java  SendRunnable.java  SerialConfig.java  SerialPort.java  SerialPortFinder.java  SerialPortManager.java  SerialUtils.java  ShellUtils.java  SimpleSerialPortManager.java
(+45 files in other folders)
